--- a/src/integTest/resources/felixProjects/bigExample/build.gradle
+++ b/src/integTest/resources/felixProjects/bigExample/build.gradle
@@ -19,7 +19,7 @@ dependencies {
   felix 'org.apache.felix:org.apache.felix.log:1.0.1'
   //scala
   felix 'com.weiglewilczek.scala-lang-osgi:scala-library:2.9.1'
-  //gogo
+  //gogo shell extensions
   felix 'org.apache.felix:org.apache.felix.gogo.command:0.12.0'
   felix 'org.apache.felix:org.apache.felix.gogo.runtime:0.10.0'
   felix 'org.apache.felix:org.apache.felix.gogo.shell:0.10.0'
