--- a/src/integTest/resources/felixProjects/bigExample/build.gradle
+++ b/src/integTest/resources/felixProjects/bigExample/build.gradle
@@ -8,8 +8,8 @@ buildscript {
         classpath group: 'de.thomasvolk.gradle', name: 'felixLauncher', version: '1.0-SNAPSHOT'
     }
 }
-apply plugin: 'java'
-apply plugin: 'felixLauncher'
+
+apply plugin: 'felix'
 
 dependencies {
   //base
