--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ src/integTest/resources/felixProjects/*/.project
 src/integTest/resources/felixProjects/*/.classpath
 src/integTest/resources/felixProjects/*/.gradle
 src/integTest/resources/felixProjects/*/build
+src/integTest/resources/felixProjects/*/*.log
