--- a/src/integTest/resources/felixProjects/bigExample/build.gradle
+++ b/src/integTest/resources/felixProjects/bigExample/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     repositories {
         maven {
-            url 'build/repo'
+            url '../../../../../build/repo'
         }
     }
     dependencies {
-        classpath group: 'de.thomasvolk.gradle', name: 'felixLauncher', version: '1.0-SNAPSHOT'
+        classpath group: 'de.thomasvolk.gradle', name: 'felix', version: '1.0-SNAPSHOT'
     }
 }
 
@@ -17,11 +17,40 @@ dependencies {
   felix 'org.apache.felix:org.apache.felix.configadmin:1.2.8'
   felix 'org.apache.felix:org.apache.felix.scr:1.6.0'
   felix 'org.apache.felix:org.apache.felix.log:1.0.1'
+  //http
+  felix 'org.apache.felix:org.apache.felix.http.jetty:2.2.0'
+  felix 'org.apache.felix:org.apache.felix.ipojo.handler.whiteboard:1.6.0'
+  felix 'org.apache.felix:org.apache.felix.http.bridge:2.2.0'
+  felix 'org.apache.felix:org.apache.felix.http.bundle:2.2.0'
+  felix 'org.apache.felix:org.apache.felix.http.proxy:2.2.0'
+  felix 'org.apache.felix:org.apache.felix.ipojo:1.8.0'
+  //felix webconsole
+  felix 'org.apache.felix:org.apache.felix.webconsole:3.1.8'
   //scala
   felix 'com.weiglewilczek.scala-lang-osgi:scala-library:2.9.1'
-  //gogo shell extensions
-  felix 'org.apache.felix:org.apache.felix.gogo.command:0.12.0'
-  felix 'org.apache.felix:org.apache.felix.gogo.runtime:0.10.0'
-  felix 'org.apache.felix:org.apache.felix.gogo.shell:0.10.0'
 }
 
+subprojects {
+    apply plugin: 'osgi'
+    apply plugin: 'scala'
+
+    group = 'de.thomasvolk'
+    version = '1.0-SNAPSHOT'
+    sourceCompatibility = 1.6
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+
+    dependencies {
+        scalaTools 'org.scala-lang:scala-compiler:2.9.0'
+        scalaTools 'org.scala-lang:scala-library:2.9.0'
+
+        scalaTools 'org.scala-tools.testing:specs_2.9.0-1:1.6.8'
+        scalaTools 'org.scalatest:scalatest:1.2'
+
+        compile 'org.osgi:org.osgi.core:4.2.0'
+        compile 'org.scala-lang:scala-library:2.9.0'
+    }
+}
