--- a/src/integTest/resources/felixProjects/hello/hello/build.gradle
+++ b/src/integTest/resources/felixProjects/hello/hello/build.gradle
@@ -2,11 +2,10 @@ apply plugin: 'java'
 
 jar {
     manifest {
-        version = version
-        name = name
         instruction 'Bundle-Activator', 'de.thomasvolk.felix.hello.Activator'
         instruction 'Import-Package', '*'
         instruction 'Export-Package', '*'
-        attributes( 'Built-By': gradle.gradleVersion )
+        attributes( 'Built-By': gradle.gradleVersion, 'Bundle-Name': name, 'Bundle-Version': version )
+
     }
 }
