--- a/src/integTest/resources/felixProjects/bigExample/helloServlet/build.gradle
+++ b/src/integTest/resources/felixProjects/bigExample/helloServlet/build.gradle
@@ -1,13 +1,11 @@
 
 jar {
     manifest {
-        version = version
-        name = name
         instruction 'Bundle-Activator', 'de.thomasvolk.felix.helloservlet.Activator'
         instruction 'Import-Package', '*'
         instruction 'Export-Package', '*'
         instruction 'Service-Component', 'OSGI-INF/serviceComponents.xml'
-        attributes( 'Built-By': gradle.gradleVersion )
+        attributes( 'Built-By': gradle.gradleVersion, 'Bundle-Name': name, 'Bundle-Version': version )
     }
 }
 
