--- a/src/main/resources/META-INF/gradle-plugins/felix-launchpad.properties
+++ b/src/main/resources/META-INF/gradle-plugins/felix-launchpad.properties
@@ -1,1 +1,1 @@
-implementation-class=de.thomasvolk.gradle.felix.launchpad.FelixLaunchpadPlugin
+implementation-class=de.thomasvolk.gradle.plugins.felix.launchpad.FelixLaunchpadPlugin
