--- a/src/integTest/resources/felixProjects/servlet/build.gradle
+++ b/src/integTest/resources/felixProjects/servlet/build.gradle
@@ -14,6 +14,8 @@ apply plugin: 'felix-launchpad'
 felixLaunchpad {
     logLevel = 2
     httpPort = 8080
+    properties.'org.osgi.framework.system.packages.extra' = 'sun.misc'
+    properties.testProperty = '123'
 }
 
 dependencies {
