--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'groovy'
 apply plugin: 'maven'
 
 group = 'de.thomasvolk.gradle'
-version = '1.0-SNAPSHOT'
+version = '1.1.0'
 archivesBaseName = 'felixLaunchpad'
 
 repositories {
