--- a/src/integTest/resources/felixProjects/hello/build.gradle
+++ b/src/integTest/resources/felixProjects/hello/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath group: 'de.thomasvolk.gradle', name: 'felixLaunchpad', version: '1.0-SNAPSHOT'
+        classpath group: 'de.thomasvolk.gradle', name: 'felixLaunchpad', version: '1.1.0'
     }
 }
 
